# today

./: Cargo.toml
src/: app.rs  cli.rs  commands.rs  formatter.rs  lib.rs  main.rs  monoid.rs  partial_config.rs  semigroup.rs  task.rs  ui.rs
src/cli/: constants.rs  mod.rs
src/commands/: mod.rs  parser.rs
src/json/: mod.rs
src/parser/: program.rs
src/repository/: mod.rs
src/ui/: mod.rs  writers.rs
today_derive/: Cargo.toml
today_derive/src/: lib.rs
