[package]
name = "today"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
dirs = "4.0.0"
inquire = { version = "0.2.1", default_features = false, features = ["date", "termion", "builtin_validators"] }
num-traits = "0.2.14"
today_derive = { path = "today_derive" }

[dev-dependencies]
test-case = "1.2.0"
