[package]
name = "today"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.8", features = ["cargo"] }
crossterm = "0.23.2"
dirs = "4.0.0"
hotwatch = "0.4.6"
inquire = { version = "0.2.1", default_features = false, features = ["date", "termion", "builtin_validators"] }
itertools = "0.10.3"
nix = { version = "0.24.1", features = ["signal"], default-features = false }
num-traits = "0.2.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
termion = "1.5.6"
thiserror = "1.0.30"
today_derive = { path = "today_derive" }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "1.2.0"
